--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,8 +1,8 @@
 # region App Connectivity
 app_url=http://automationpractice.com/index.php
 app_host=173.231.240.87
-app_user={erazchow@gmail.com}
-app_password={Eraz1234}
+app_user=erazchow@gmail.com
+app_password=Eraz1234
 
 # endregion
 
